--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,7 @@ description:         Please see the README on GitHub at <https://github.com/ppet
 
 dependencies:
 - base
+- containers
 - hashable
 - hmatrix
 - unordered-containers
